tests/ui/rust-2024/reserved-guarded-strings-lexing.stderr
error: prefix `Ñ` is unknown
  --> $DIR/reserved-guarded-strings-lexing.rs:24:12
   |
LL |     demo2!(Ñ"foo");
   |            ^ unknown prefix
   |
   = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
   |
LL |     demo2!(Ñ "foo");
   |             +

error: prefix `Ñ` is unknown
  --> $DIR/reserved-guarded-strings-lexing.rs:26:12
   |
LL |     demo4!(Ñ#""#);
   |            ^ unknown prefix
   |
   = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
   |
LL |     demo4!(Ñ #""#);
   |             +

error: identifiers cannot contain emoji: `🙃`
  --> $DIR/reserved-guarded-strings-lexing.rs:30:12
   |
LL |     demo3!(🙃#"");
   |            ^^

warning: will be parsed as a guarded string in Rust 2024
  --> $DIR/reserved-guarded-strings-lexing.rs:26:13
   |
LL |     demo4!(Ñ#""#);
   |             ^^^^
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see issue #123735 <https://github.com/rust-lang/rust/issues/123735>
note: the lint level is defined here
  --> $DIR/reserved-guarded-strings-lexing.rs:4:9
   |
LL | #![warn(rust_2024_guarded_string_incompatible_syntax)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: insert whitespace here to avoid this being parsed as a guarded string in Rust 2024
   |
LL |     demo4!(Ñ# ""#);
   |              +

warning: will be parsed as a guarded string in Rust 2024
  --> $DIR/reserved-guarded-strings-lexing.rs:30:13
   |
LL |     demo3!(🙃#"");
   |              ^^^
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see issue #123735 <https://github.com/rust-lang/rust/issues/123735>
help: insert whitespace here to avoid this being parsed as a guarded string in Rust 2024
   |
LL |     demo3!(🙃# "");
   |               +

warning: will be parsed as a guarded string in Rust 2024
  --> $DIR/reserved-guarded-strings-lexing.rs:36:12
   |
LL | ...n!(####################################################################################################################################################################################################################################################################"foo...
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see issue #123735 <https://github.com/rust-lang/rust/issues/123735>

error: aborting due to 3 previous errors; 3 warnings emitted

